// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageShell — Snapshot & Behaviour Tests > renders compact variant with status and breadcrumbs 1`] = `
<div
  class="min-h-full flex flex-col bg-surface-bg text-text-primary"
>
  <div
    aria-hidden="true"
    class="h-[2px] w-full shrink-0 bg-gradient-to-r from-red-500/0 via-red-500 to-red-500/0 motion-safe:animate-pulse"
  />
  <header
    class="sticky top-0 z-30 bg-surface-card/60 backdrop-blur-xl border-b border-border/40 px-4 lg:px-6 pt-4 pb-3"
    role="banner"
  >
    <nav
      aria-label="Fil d'Ariane"
      class="flex items-center gap-2 mb-3 text-xs text-text-muted select-none"
    >
      <a
        class="hover:text-text-primary transition-colors tracking-tight"
        href="/operations"
      >
        Opérations
      </a>
      <span
        aria-hidden="true"
        class="text-text-muted/40"
      >
        ·
      </span>
      <span
        class="text-text-secondary font-medium tracking-tight"
      >
        Cuisine
      </span>
    </nav>
    <div
      class="flex flex-col md:flex-row md:items-center justify-between gap-4"
    >
      <div
        class="flex items-baseline gap-3 md:gap-4 min-w-0 flex-wrap"
      >
        <span
          class="font-mono text-[10px] uppercase tracking-[0.24em] text-text-muted/80 shrink-0"
        >
          Opérations
        </span>
        <h1
          class="font-serif italic text-text-primary tracking-tight [text-wrap:balance] truncate text-2xl"
        >
          KDS Cuisine
        </h1>
        <span
          class="flex items-center gap-2 self-center pl-1 shrink-0"
        >
          <span
            class="relative flex w-2.5 h-2.5 items-center justify-center"
          >
            <span
              class="absolute inset-0 rounded-full motion-safe:animate-ping bg-red-500 opacity-50"
            />
            <span
              class="relative rounded-full w-2 h-2 bg-red-500"
            />
          </span>
          <span
            class="font-mono text-[10px] tracking-[0.20em] uppercase text-red-500/90"
          >
            Rush Actif
          </span>
        </span>
      </div>
    </div>
  </header>
  <main
    class="flex-1 flex flex-col p-4"
  >
    <div>
      Grille des tickets
    </div>
  </main>
</div>
`;

exports[`PageShell — Snapshot & Behaviour Tests > renders default variant with title, kicker, and subtitle 1`] = `
<div
  class="min-h-full flex flex-col bg-surface-bg text-text-primary"
>
  <header
    class="sticky top-0 z-30 bg-surface-card/60 backdrop-blur-xl border-b border-border/40 px-6 lg:px-10 pt-6 pb-5"
    role="banner"
  >
    <div
      class="flex flex-col md:flex-row md:items-center justify-between gap-4"
    >
      <div
        class="flex items-baseline gap-3 md:gap-4 min-w-0 flex-wrap"
      >
        <span
          class="font-mono text-[10px] uppercase tracking-[0.24em] text-text-muted/80 shrink-0"
        >
          Service en Salle
        </span>
        <h1
          class="font-serif italic text-text-primary tracking-tight [text-wrap:balance] truncate text-3xl md:text-5xl"
        >
          Commandes & Tables
        </h1>
      </div>
    </div>
    <p
      class="text-sm text-text-secondary mt-3 max-w-[65ch] leading-relaxed"
    >
      Vue temps réel des commandes actives
    </p>
  </header>
  <main
    class="flex-1 flex flex-col p-6 lg:p-8 max-w-[100rem] w-full mx-auto"
  >
    <div>
      Contenu principal
    </div>
  </main>
</div>
`;

exports[`PageShell — Snapshot & Behaviour Tests > renders flush variant with fraction metric 1`] = `
<div
  class="min-h-full flex flex-col bg-surface-bg text-text-primary"
>
  <header
    class="sticky top-0 z-30 bg-surface-card/60 backdrop-blur-xl border-b border-border/40 px-6 lg:px-10 pt-6 pb-5"
    role="banner"
  >
    <div
      class="flex flex-col md:flex-row md:items-center justify-between gap-4"
    >
      <div
        class="flex items-baseline gap-3 md:gap-4 min-w-0 flex-wrap"
      >
        <h1
          class="font-serif italic text-text-primary tracking-tight [text-wrap:balance] truncate text-3xl md:text-5xl"
        >
          Plan de Salle
        </h1>
      </div>
      <div
        class="flex items-center gap-3 flex-wrap shrink-0"
      >
        <span
          class="inline-flex items-baseline gap-1.5 text-text-primary"
        >
          <span
            class="font-serif font-black text-xl leading-none tabular-nums text-accent-gold"
          >
            18
          </span>
          <span
            class="text-text-muted/60 tabular-nums text-sm"
          >
            /
          </span>
          <span
            class="font-serif font-medium text-sm text-text-muted tabular-nums"
          >
            24
          </span>
          <span
            class="font-serif italic text-micro uppercase tracking-[0.24em] text-text-muted/70 ml-2"
          >
            Couverts
          </span>
        </span>
      </div>
    </div>
  </header>
  <main
    class="flex-1 flex flex-col p-0"
  >
    <div
      id="canvas-root"
    >
      Canvas interactif
    </div>
  </main>
</div>
`;

exports[`PageShell — Snapshot & Behaviour Tests > renders hero variant with actions and tabs 1`] = `
<div
  class="min-h-full flex flex-col bg-surface-bg text-text-primary"
>
  <header
    class="sticky top-0 z-30 bg-surface-card/60 backdrop-blur-xl border-b border-border/40 px-6 lg:px-10 pt-8 pb-6"
    role="banner"
  >
    <div
      class="flex flex-col md:flex-row md:items-center justify-between gap-4"
    >
      <div
        class="flex items-baseline gap-3 md:gap-4 min-w-0 flex-wrap"
      >
        <span
          class="font-mono text-[10px] uppercase tracking-[0.24em] text-text-muted/80 shrink-0"
        >
          Pilotage Global
        </span>
        <h1
          class="font-serif italic text-text-primary tracking-tight [text-wrap:balance] truncate text-4xl md:text-6xl"
        >
          Tour de Contrôle
        </h1>
      </div>
      <div
        class="flex items-center gap-3 flex-wrap shrink-0"
      >
        <div
          class="flex items-center h-10 bg-surface-glass border border-border/40 rounded-xl overflow-hidden [&>*:not(:first-child)]:border-l [&>*]:border-border/40"
        >
          <button
            class="h-10 px-5 rounded-xl text-sm font-medium tracking-tight transition-colors flex items-center gap-2 disabled:opacity-40 disabled:cursor-not-allowed bg-accent-gold hover:bg-accent-gold/90 text-text-inverted shadow-[var(--shadow-glow-accent,0_4px_20px_-6px_rgba(0,0,0,0.4))]"
            type="button"
          >
            Exporter
          </button>
        </div>
      </div>
    </div>
    <nav
      aria-label="Sections"
      class="mt-5 flex gap-6 overflow-x-auto no-scrollbar -mb-[9px] pb-[7px]"
    >
      <button
        aria-current="page"
        class="group relative shrink-0 flex items-center gap-2 pb-2 text-xs tracking-wide transition-colors whitespace-nowrap text-accent-gold font-semibold"
      >
        <span>
          Vue Générale
        </span>
        <span
          aria-hidden="true"
          class="absolute -bottom-[1px] left-0 right-0 h-[2px] bg-accent-gold rounded-full"
        />
      </button>
      <button
        class="group relative shrink-0 flex items-center gap-2 pb-2 text-xs font-medium tracking-wide transition-colors whitespace-nowrap text-text-muted hover:text-text-primary"
      >
        <span>
          Performances
        </span>
      </button>
    </nav>
  </header>
  <main
    class="flex-1 flex flex-col p-6 lg:p-8 max-w-[100rem] w-full mx-auto"
  >
    <div>
      Dashboard analytique
    </div>
  </main>
</div>
`;
